Overhaul CLI into modular `hal` binary with runtime agent install
Replace the 560-line monolithic cli.ts with a modular src/cli/ directory.
New `hal` binary via bun link. Key changes: `hal run owner/repo -m "msg"` as
the primary command, short ID prefix matching, lazy init (read-only commands
skip orchestrator), lima as default provider, repo shorthand, comprehensive
per-command --help, and backward-compat aliases with deprecation hints.

Also adds runtime agent install (AgentConfig.install) so agents are installed
on VMs at task time rather than baked into the golden image.

--- a/src/image/hal9999.yaml
+++ b/src/image/hal9999.yaml
@@ -82,9 +82,7 @@ provision:
       # Install bun
       curl -fsSL https://bun.sh/install | bash
 
-      # Agent-agnostic: install Claude Code for now, but the agent
-      # command is determined by the orchestrator, not the image.
-      curl -fsSL https://claude.ai/install.sh | bash || true
+      # Agent-agnostic: agents are installed at runtime by the orchestrator.
 
       # Set up PATH for both interactive and non-interactive shells
       cat >> ~/.profile <<'EOF'
