Fire-and-forget execution model with GITHUB_TOKEN support
Refactor orchestrator from persistent SSH sessions to autonomous VM execution:
upload a wrapper script, launch with nohup, poll for completion. Agent survives
host process death. Add GITHUB_TOKEN forwarding for private repo cloning and
git push via credential helper. Enhanced recovery resumes polling for running
tasks after restart. Install gh CLI in golden images.

--- a/src/image/hal9999.yaml
+++ b/src/image/hal9999.yaml
@@ -66,6 +66,16 @@ provision:
       apt-get update -qq
       apt-get install -y -qq nodejs
 
+      # GitHub CLI (gh)
+      mkdir -p -m 755 /etc/apt/keyrings
+      curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg \
+        | tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null
+      chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg
+      echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" \
+        > /etc/apt/sources.list.d/github-cli.list
+      apt-get update -qq
+      apt-get install -y -qq gh
+
       # Create workspace directory
       mkdir -p /workspace
       chown agent:agent /workspace
