Per-provider idle defaults, persistent reap, and pre-warm pool
Lima VMs stay warm 30min (free), DO VMs 5min (costs money). idle_since
column in DB enables reap across process restarts. Optional minReady
per slot keeps warm VMs pre-provisioned. New `hal pool warm` command.

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,13 @@ HAL_REGION=nyc1
 HAL_PLAN=s-1vcpu-1gb
 HAL_MAX_POOL_SIZE=5
 HAL_SSH_KEY_ID=your_ssh_key_id
-# HAL_IDLE_TIMEOUT_S=300
+
+# Idle timeout (seconds). Per-provider defaults: lima=1800 (30min), do=300 (5min).
+# HAL_IDLE_TIMEOUT_S=0            # Global override (0 = destroy immediately)
+# HAL_LIMA_IDLE_TIMEOUT_S=1800
+# HAL_DO_IDLE_TIMEOUT_S=300
+
+# Pre-warm pool — minimum ready VMs per provider (default: 0, opt-in)
+# HAL_MIN_READY=0
+# HAL_LIMA_MIN_READY=1
+# HAL_DO_MIN_READY=0
